// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivatePageLayout it should match snapshot with user profile having name set 1`] = `
<div>
  <div
    class="MuiContainer-root makeStyles-page-31 makeStyles-portalPage-26 makeStyles-portalPage-30"
  >
    <div
      class="makeStyles-root-24"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-32 mui-fixed MuiPaper-outlined"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        >
          <div
            class="makeStyles-appBarContent-33"
          >
            <button
              aria-label="side menu"
              class="MuiButtonBase-root MuiIconButton-root makeStyles-sideMenuButton-37 MuiIconButton-colorInherit"
              data-testid="sideMenuIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="material-icons"
                  data-testid="icon-close"
                >
                  close
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="makeStyles-logo-34"
            >
              <a
                aria-current="page"
                class="active"
                href="/"
              >
                <img
                  alt="Alcumus logo"
                  data-testid="logoImage"
                  src="/images/alcumus-logo-with-tagline.svg"
                />
              </a>
            </div>
            <div
              class="makeStyles-userContent-35"
            >
              <div
                class="makeStyles-desktopUserMenu-45"
              >
                <div
                  class="makeStyles-userProfileMenu-41"
                >
                  <img
                    alt="User Profile"
                    aria-controls="primary-search-account-menu"
                    aria-haspopup="true"
                    aria-label="account of current user"
                    class="makeStyles-userProfile-42"
                    data-testid="profileImage"
                    src="/icons/Profile.svg"
                  />
                </div>
              </div>
              <div
                class="makeStyles-mobileUserMenu-46"
              >
                <button
                  aria-label="Settings"
                  class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-40 MuiIconButton-colorInherit"
                  data-testid="settingsIcon"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <span
                      class="material-icons-outlined"
                      data-testid="icon-settings"
                    >
                      settings
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </header>
      <main
        class="makeStyles-content-25"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        />
        <h1>
          Test Page
        </h1>
      </main>
    </div>
  </div>
</div>
`;

exports[`PrivatePageLayout it should match snapshot with user profile not having name set 1`] = `
<div>
  <div
    class="MuiContainer-root makeStyles-page-8 makeStyles-portalPage-3 makeStyles-portalPage-7"
  >
    <div
      class="makeStyles-root-1"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-9 mui-fixed MuiPaper-outlined"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        >
          <div
            class="makeStyles-appBarContent-10"
          >
            <button
              aria-label="side menu"
              class="MuiButtonBase-root MuiIconButton-root makeStyles-sideMenuButton-14 MuiIconButton-colorInherit"
              data-testid="sideMenuIcon"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <span
                  class="material-icons"
                  data-testid="icon-close"
                >
                  close
                </span>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <div
              class="makeStyles-logo-11"
            >
              <a
                aria-current="page"
                class="active"
                href="/"
              >
                <img
                  alt="Alcumus logo"
                  data-testid="logoImage"
                  src="/images/alcumus-logo-with-tagline.svg"
                />
              </a>
            </div>
            <div
              class="makeStyles-userContent-12"
            >
              <div
                class="makeStyles-desktopUserMenu-22"
              >
                <div
                  class="makeStyles-userProfileMenu-18"
                >
                  <img
                    alt="User Profile"
                    aria-controls="primary-search-account-menu"
                    aria-haspopup="true"
                    aria-label="account of current user"
                    class="makeStyles-userProfile-19"
                    data-testid="profileImage"
                    src="/icons/Profile.svg"
                  />
                </div>
              </div>
              <div
                class="makeStyles-mobileUserMenu-23"
              >
                <button
                  aria-label="Settings"
                  class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-17 MuiIconButton-colorInherit"
                  data-testid="settingsIcon"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <span
                      class="material-icons-outlined"
                      data-testid="icon-settings"
                    >
                      settings
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </header>
      <main
        class="makeStyles-content-2"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        />
        <h1>
          Test Page
        </h1>
      </main>
    </div>
  </div>
</div>
`;
